refactor: replace URL instantiation with URI conversion in DomainController, IdeTestExportController, and PageController; remove unused AccountService imports in ElementController and PageController